--- a/css/wdts-admin.css
+++ b/css/wdts-admin.css
@@ -15,8 +15,8 @@
   border-radius-topright: 0.5em;
   -moz-border-radius-topleft: 0.5em;
   -moz-border-radius-topright: 0.5em;
-  -webkit-border-radius-topleft: 0.5em;
-  -webkit-border-radius-topright: 0.5em;
+  -webkit-border-top-left-radius: 0.5em;
+  -webkit-border-top-right-radius: 0.5em;
   text-decoration: none;
 }
 
@@ -90,4 +90,21 @@ h3.wdts {
   font-size: 115%;
   color: #770000;
   font-weight: bold;
+}
+
+.wdts-updated {
+  width: 100%;
+  position: absolute;
+  background-color: #E4F2FD;
+  text-align: center;
+  font-weight: bold;
+  border-bottom: solid black 1px;
+}
+
+.wdts-updated div {
+  padding: 0.75em;
+}
+
+body {
+  overflow-x: hidden
 }
